Fixed the node CSS for HuffmanCodingExamp and fixed some checkstyle issues

--- a/AV/Development/HuffmanCoding.css
+++ b/AV/Development/HuffmanCoding.css
@@ -49,8 +49,15 @@
 .jsavarray:nth-of-type(8) {top: 290px;}
 .jsavarray:nth-of-type(9) {top: 330px;}
 
-.jsavarray .jsavnode{
+/*.jsavarray .jsavnode{
   border: 0;
   background-color: #eed;
   box-shadow: 0 0 0;
+}*/
+
+.huffmanleaf {
+  border-radius: 1px;
+  background-color: orange;
+  line-height: 22px;
+  z-index: 100; /* Prevents the tails of the edges from showing up in the background of the node */
 }
