--- a/AV/Development/proficiency.css
+++ b/AV/Development/proficiency.css
@@ -1,6 +1,11 @@
 .jsavcontainer {
   height: 650px;
 }
+.jsavlabel {
+  font-size: 16px;
+  font-family: "Times New Roman";
+  font-weight: bold;
+}
 .jsavtreenode.emptynode {
   border: 1px dashed #777 !important;
   background-color: #fff !important;
