--- a/AV/Development/HuffmanCON.css
+++ b/AV/Development/HuffmanCON.css
@@ -1,17 +1,19 @@
 /* Sets maximum width to JSAV container */
 #DecodeExample {
-  padding-top: 20px;
+  padding-top: 30px;
   width: 650px;
 }
 
 /* Sets width and height to the JSAV canvas */
 #DecodeExample .jsavcanvas {
-  height: 530px;
-  width: 650px;
+  height: 350px;
+  width: 620px;
 }
 
 #DecodeExample .jsavtree {
-  margin-top: -50px;
+  margin-top: -40px;
+  margin-left: 210px;
+  left: 190px;
 }
 
 .jsavoutput.jsavline {
@@ -20,51 +22,55 @@
   text-align: center;
 }
 
-.jsavoutput .jsavline
-
 .jsavnode .jsavvalue {
-  height: 30px;
+  height: 25px;
 }
 
 .jsavautoresize .jsavnode {
-  min-width:30px;
-  min-height:30px;
-  width: 30px;
-  height: 30px;
+  min-width:25px;
+  min-height:25px;
+  width: 25px;
+  height: 25px;
 }
 
 /*=================== MExample ===================*/
 /* Sets maximum width to JSAV container */
 #MExample {
-  padding-top: 20px;
+  padding-top: 30px;
   width: 650px;
 }
 
 /* Sets width and height to the JSAV canvas */
 #MExample .jsavcanvas {
-  height: 530px;
-  width: 650px;
+  height: 350px;
+  width: 600px;
 }
 
 #MExample .jsavtree {
-  margin-top: -50px;
+  margin-top: -40px;
 }
 
+#MExample .jsavtree.jsavcommontree.jsavautoresize.jsavbinarytree {
+  margin-left: 100px;
+}
 
 /*=================== Con1 ===================*/
 #Con1 {
-  padding-top: 20px;
+  padding-top: 30px;
   width: 650px;
 }
 
 /* Sets width and height to the JSAV canvas */
 #Con1 .jsavcanvas {
-  height: 530px;
-  width: 650px;
+  margin-top:20px;
+  height: 355px;
+  width: 300px;
 }
 
 #Con1 .jsavtree {
   margin-top: -30px;
+  top: 0px;
+  margin-left: 250px;
 }
 
 #Con1 .jsavoutput.jsavline {
@@ -74,18 +80,15 @@
 /*=================== finalHuffmanTree ===================*/
 
 #finalHuffmanTree {
-  width:450px;
-  height:490px;
+  width:350px;
+  height:350px;
 }
 
 #finalHuffmanTree .jsavtree {
-  margin-top: -40px;
+  margin-top: -30px;
+  margin-left: 65px;
 }
 
-/*#finalHuffmanTree .jsavnode .jsavvalue {
-  height: 30px;
-}*/
-
 .jsavnode.jsavtreenode.jsavbinarynode .jsavvalue {
-  height:30px;
+  height:25px;
 }
