Improved slideshow design

--- a/AV/Development/twoThreeTreeCON.css
+++ b/AV/Development/twoThreeTreeCON.css
@@ -4,6 +4,7 @@
 .jsavarray {
   margin-top: 0;
   margin-bottom: 0;
+  min-height: 30px;
 }
 
 /* Change the size of each array box */
@@ -49,7 +50,6 @@
 #simpleInsertCON .jsavcanvas {
 	height: 250px;
 	width: 700px;
-	margin-left: 70px;
 }
 
 /* Align and give a little padding to the output messages of each slide */
@@ -68,8 +68,7 @@
 /* Set width and height for the JSAV canvas */
 #promoteCON .jsavcanvas {
 	height: 250px;
-	width: 800px;
-	margin-left: 70px;
+	width: 780px;
 }
 
 /* Align and give a little padding to the output messages of each slide */
