--- a/AV/Development/HuffmanCON.css
+++ b/AV/Development/HuffmanCON.css
@@ -1,3 +1,12 @@
+.jsavnode.jsavtreenode.jsavbinarynode.huffmanleaf {
+  height:32px;
+  width:32px;
+  line-height: 16px;
+  z-index: 100;
+  margin-top:3px; 
+  padding-top: 1px;
+}
+
 /* Sets maximum width to JSAV container */
 #DecodeExample {
   padding-top: 30px;
@@ -6,12 +15,12 @@
 
 /* Sets width and height to the JSAV canvas */
 #DecodeExample .jsavcanvas {
-  height: 350px;
+  height: 330px;
   width: 620px;
 }
 
 #DecodeExample .jsavtree {
-  margin-top: -40px;
+  margin-top: -25px;
   margin-left: 210px;
   left: 190px;
 }
@@ -42,12 +51,12 @@
 
 /* Sets width and height to the JSAV canvas */
 #MExample .jsavcanvas {
-  height: 350px;
+  height: 330px;
   width: 600px;
 }
 
 #MExample .jsavtree {
-  margin-top: -40px;
+  margin-top: -25px;
 }
 
 #MExample .jsavtree.jsavcommontree.jsavautoresize.jsavbinarytree {
@@ -63,12 +72,12 @@
 /* Sets width and height to the JSAV canvas */
 #Con1 .jsavcanvas {
   margin-top:20px;
-  height: 355px;
+  height: 335px;
   width: 300px;
 }
 
 #Con1 .jsavtree {
-  margin-top: -30px;
+  margin-top: -15px;
   top: 0px;
   margin-left: 250px;
 }
@@ -80,15 +89,27 @@
 /*=================== finalHuffmanTree ===================*/
 
 #finalHuffmanTree {
-  width:350px;
+  width:370px;
   height:350px;
 }
 
 #finalHuffmanTree .jsavtree {
-  margin-top: -30px;
-  margin-left: 65px;
+  margin-top: 1px;
+  margin-left: 51px;
 }
 
 .jsavnode.jsavtreenode.jsavbinarynode .jsavvalue {
   height:25px;
+}
+
+/*=================== timeline ===================*/
+
+#timeline {
+  width: 600px;
+  height: 550px;
+}
+
+#timeline .jsavtree {
+  margin-left: 55px;
+  margin-top: 10px;
 }
