--- a/AV/Development/KruskalPE.css
+++ b/AV/Development/KruskalPE.css
@@ -2,13 +2,11 @@
   width: 800px;
   height: 595px;
 }
-.jsavline {
-  height: 45px;
-  margin: 0 0 0 20px;
-}
-
 #procontrols {
   text-align: center;
+}
+.jsavcanvas{
+  min-width:800px !important;
 }
 .jsavverticalarray .jsavindex:first-of-type, .jsavverticalarray .jsavindex:first-of-type .jsavvalue {
   -ms-border-top-left-radius: 0px;
