Final update for linear indexing slideshow

--- a/AV/Development/linearIndexingCON.css
+++ b/AV/Development/linearIndexingCON.css
@@ -1,3 +1,15 @@
+.jsavnode .jsavvalue { /* This will get the array cell values to center vertically */
+  height: 30px;
+}
+
+.jsavnode {
+  line-height: 30px !important;
+  min-width: 30px !important;
+  max-width: 30px !important;
+  min-height: 30px !important;
+  max-height: 30px !important;
+}
+
 #varindexCON .jsavcanvas{
  overflow:visible;
  margin-left: auto;
