Additional Bintree development. Nowhere near done.

--- a/AV/Development/HuffmanCON.css
+++ b/AV/Development/HuffmanCON.css
@@ -140,3 +140,8 @@
 #TrieTimeline .jsavoutput {
   width: 590px;
 }
+
+/*====================== Misc. =======================*/
+#ninelabel {
+  padding-left: 5px;
+}
