--- a/AV/Development/treeIndexingCON.css
+++ b/AV/Development/treeIndexingCON.css
@@ -7,12 +7,15 @@
 }
 
 /* Change the size of the tree nodes */
-#pagedBSTCON .jsavtree .jsavnode, #pagedBSTCON .jsavtree .jsavvalue {
-	line-height: 30px;
+#pagedBSTCON .jsavtree .jsavnode {
 	min-width: 30px;
 	max-width: 30px;
 	min-height: 30px;
 	max-height: 30px;
+}
+
+#pagedBSTCON .jsavtree .jsavvalue {
+    height: 30px;
 }
 
 #pagedBSTCON .jsavoutput.jsavline {
@@ -25,11 +28,32 @@
 	font-size: 1.3em;
 }
 
-/* Add padding to the rectangle container to show the all the rectangles */
-#pagedBSTCON .jsavcanvas > svg {
-	/*margin-top: -10px;*/
-	/*height: 150px;*/
-	/*width: 320px;*/
+/* Create styling for the pagedBSTCON_2 diagram */
+
+#pagedBSTCON_2 {
+    width: 700px;
+    height: 500px;
+}
+
+#pagedBSTCON_2 .jsavtree .jsavnode, #pagedBSTCON_2 .jsavarray .jsavnode {
+    min-height: 30px;
+    max-height: 30px;
+    min-width: 30px;
+    max-width: 30px;
+}
+
+#pagedBSTCON_2 .jsavtree .jsavvalue, #pagedBSTCON_2 .jsavarray .jsavvalue {
+    height: 30px;
+}
+
+#pagedBSTCON_2 .jsavoutput.jsavline {
+    text-align: center;
+    width: 700px;
+}
+
+#pagedBSTCON_2 .jsavlabel {
+    z-index: 900;
+    font-size: 1.3em;
 }
 
 /* Create styling for the balanceBSTCON diagram */
