--- a/AV/Development/MergeSortAnalysis.css
+++ b/AV/Development/MergeSortAnalysis.css
@@ -1,16 +1,26 @@
 #container {
-  width: 1000px !important;
+  width: 850px !important;
   height: 600px;
 }
 
 .avcontainer{
-  width: 1000px;
+  width: 850px;
   height: 600px;
 }
 
+.jsavnode {
+  line-height: 30px !important;
+  min-width: 30px !important;
+  max-width: 30px !important;
+  min-height: 30px !important;
+  max-height: 30px !important;
+}
+.jsavnode .jsavvalue { /* This will get the array cell values to center vertically */
+  height: 30px;
+}
 .jsavcanvas {
   height: 600px;
-  width:1000px;
+  width:850px;
 }
 .jsavline {
   width:600px;
