fix edges node to be unclickable and added highlighting to term nodes

--- a/AV/Development/conceptMap.css
+++ b/AV/Development/conceptMap.css
@@ -16,6 +16,11 @@
 	padding-right: 15px;
 }
 
+.jsavnode.edge {
+	border-radius: 8px;
+	border-style: none;
+}
+
 ul {
 list-style-type: none;
 padding: 0px;
