--- a/lib/odsaAV.css
+++ b/lib/odsaAV.css
@@ -5,7 +5,8 @@ body, input, select {
 
 /* Creates a header which standardizes the layout for proficiency exercise controls and buttons */
 .proHeaderTable {
-  margin-top: -20px;
+  /*margin-top: -20px;*/
+  margin-top: -30px;
   border-bottom: 0 none;
   width: 100%;
 }
@@ -37,7 +38,8 @@ table .headerRight {
 
 /* Affects the margin of buttons in the header table */
 table td input {
-  margin-top: 10px;
+  /*margin-top: 10px;*/
+  margin-top: 0;
 }
 
 /* AV title */
@@ -53,14 +55,16 @@ form {
 
 /* Style for container holding AV content */
 .avcontainer {
-  margin-top: -15px;
+  /*margin-top: -15px;*/
+  margin-top: -25px;
 }
 .jsavcontainer {
   background-color: #efe;
   border: 0 none;
 }
 .jsavexercisecontrols {
-  margin-top: 10px;
+  /*margin-top: 10px;*/
+  margin-top: 20px;
   text-align: center;
 }
 .jsavcontrols {
