--- a/AV/Development/quicksort2PRO.css
+++ b/AV/Development/quicksort2PRO.css
@@ -9,6 +9,12 @@
   width: 180px;
   box-shadow: 5px 5px 5px #666;
 }
+/* JSAV bar array styling */
+.jsavbararray .jsavvalue {
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px rgba(120, 120, 120, 0.5), 0 10px 30px rgba(255,255,255,0.4) inset
+}
+/* end of styling */
 .pivot, .pivot.jsavvalue, .jsavarray.jsavbararray .jsavindex.pivot .jsavvalue {
   background-color: #fa2;
 }
