--- a/AV/Development/firstFitPRO.css
+++ b/AV/Development/firstFitPRO.css
@@ -4,7 +4,7 @@ label {
 
 #container {
   width: 800px;
-  height: 575px;
+  height: 525px;
 }
 
 .jsavcanvas > svg { 
@@ -42,6 +42,23 @@ padding-left: 5px;
   margin-left: -10px;
   margin-top: 5px;
   padding-left: 5px;
+}
+
+.jsavstack {
+  position: absolute;
+  background-color: inherit;
+}
+
+.jsavstacknode {
+  position: absolute;
+  border-radius: 5px;
+  width: 45px;
+  height: 45px;
+  z-index: 100;
+}
+
+.jsavmodelanswer {
+  height: 220px;
 }
 
 #procontrols{
