Make the default font-family to be Ariel, san-serif

--- a/lib/odsaAV.css
+++ b/lib/odsaAV.css
@@ -1,6 +1,6 @@
 body, input, select {
   font-size: 15px;
-  font-family: "DejaVu Sans", Arial, Helvetica, sans-serif;
+  font-family: Arial, sans-serif;
 }
 
 /* Creates a header which standardizes the layout for proficiency exercise controls and buttons */
