--- a/AV/Development/QuickSortAverageCaseAnalysis.css
+++ b/AV/Development/QuickSortAverageCaseAnalysis.css
@@ -24,9 +24,6 @@
   -o-transform: rotate(90deg);
   transform: rotate(90deg);
 }
-body {
-  font-family: Arial
-}
 h1{
-  font-size: 1em
+ font-size: 1em;
 }
