Add initial translation support for InsertionSortAV; add ODSA utility for aboutstring

--- a/lib/odsaAV.css
+++ b/lib/odsaAV.css
@@ -87,11 +87,8 @@ form {
   margin: 0;
   width: 100%;
 }
-.jsavcode {
-  margin-top: -15px;
-}
-.jsavbararray .jsavindex {
-  background-color: #eee;
+.jsavbararray.jsavindexed {
+  margin-bottom: 0;
 }
 .jsavsettings {
   display: block;
