--- a/AV/Development/quicksort2PRO.css
+++ b/AV/Development/quicksort2PRO.css
@@ -12,7 +12,7 @@
 /* JSAV bar array styling */
 .jsavbararray .jsavvalue {
   border-radius: 5px;
-  box-shadow: 2px 2px 5px rgba(120, 120, 120, 0.5), 0 10px 30px rgba(255,255,255,0.4) inset
+  box-shadow: 2px 2px 5px rgba(120, 120, 120, 0.5), 0 10px 30px rgba(255,255,255,0.4) inset, 1px 1px 0 #ccc inset;
 }
 /* end of styling */
 .pivot, .pivot.jsavvalue, .jsavarray.jsavbararray .jsavindex.pivot .jsavvalue {
