Additional MathJax support for slideshows; some fixes for recursion slideshow

--- a/AV/RecurTutor/recursionIntroCON.css
+++ b/AV/RecurTutor/recursionIntroCON.css
@@ -20,7 +20,7 @@ background-image: url(Icons/person2.png);
 
 
 
-#RecursionIntroCON3 .jsavcanvas{
+#RecursionTraceCON1 .jsavcanvas{
  height: 500px;
  width: 700px;
 }
