--- a/AV/Development/MergeSortAnalysisCON.css
+++ b/AV/Development/MergeSortAnalysisCON.css
@@ -1,13 +1,7 @@
-#container {
-  width: 850px !important;
-  height: 600px;
-}
-
-.avcontainer{
+#MergeSortAnalysisCON {
   width: 850px;
-  height: 600px;
+  height: 500px;
 }
-
 .jsavnode {
   line-height: 30px !important;
   min-width: 30px !important;
@@ -18,30 +12,12 @@
 .jsavnode .jsavvalue { /* This will get the array cell values to center vertically */
   height: 30px;
 }
-.jsavcanvas {
-  height: 600px;
-  width:850px;
-}
-.jsavline {
-  width:600px;
-  height:50px;
-}
-.jsavscroll {
-  width: 250px; 
-  height: 200px;
-}
-.jsavlabel {
-    display: inline-block;
-}
 .rotated {
   -webkit-transform: rotate(90deg);
   -moz-transform: rotate(90deg);
   -ms-transform: rotate(90deg);
   -o-transform: rotate(90deg);
   transform: rotate(90deg);
-}
-h1{
-  font-size: 1em;
 }
 
 
