Shrinking the Size of the Analysis container ONLY

--- a/AV/Development/MergeSortAnalysisCON.css
+++ b/AV/Development/MergeSortAnalysisCON.css
@@ -2,14 +2,14 @@
   width: 850px;
   height: 500px;
 }
-.jsavnode {
+#MergeSortAnalysisCON .jsavnode {
   line-height: 30px !important;
   min-width: 30px !important;
   max-width: 30px !important;
   min-height: 30px !important;
   max-height: 30px !important;
 }
-.jsavnode .jsavvalue { /* This will get the array cell values to center vertically */
+#MergeSortAnalysisCON .jsavnode .jsavvalue { /* This will get the array cell values to center vertically */
   height: 30px;
 }
 .rotated {
