Recursion Tracing Exercise

--- a/AV/RecurTutor/recursiontracecon2.css
+++ b/AV/RecurTutor/recursiontracecon2.css
@@ -1,15 +1,15 @@
-RecursionWriteCON2.jsavcanvas {
+RecursionTraceCON2.jsavcanvas {
  margin-left: auto;
  margin-right: auto;
- height:900px;
- width: 900px;
+ height:200px;
+ width: 400px;
 }
 
 .jsavcanvas {
  margin-left: auto;
  margin-right: auto;
- height: 600px;
- width: 900px;
+ height: 200px;
+ width: 540px;
 }
 
 
