--- a/AV/RecurTutor/recursionwritecon1.css
+++ b/AV/RecurTutor/recursionwritecon1.css
@@ -8,6 +8,12 @@ RecursionWriteCON1.jsavcanvas {
 }
 
 
+.jsavcanvas {
+ margin-left: auto;
+ margin-right: auto;
+ height: 200px;
+ width: 540px;
+}
 
 .svg{
   stroke-width: 1;
