--- a/AV/RecurTutor/recursiontracecon1.css
+++ b/AV/RecurTutor/recursiontracecon1.css
@@ -5,6 +5,12 @@
  width: 700px;
 }
 
+.jsavcanvas {
+ margin-left: auto;
+ margin-right: auto;
+ height: 500px;
+ width: 540px;
+}
 
 .svg{
   stroke-width: 1;
