--- a/lib/conceptMap.css
+++ b/lib/conceptMap.css
@@ -3,6 +3,12 @@
   height: 650px;
 }
 
+#info  {
+  width: 300px;
+  height: 400px;
+  margin-top: 30px;
+}
+
 .avcontainer{
   overflow: visible;
 }
