Lots of changes to list chapter

--- a/AV/List/listArrayCON.css
+++ b/AV/List/listArrayCON.css
@@ -1,3 +1,7 @@
+.jsavnode .jsavvalue { /* This will get the array cell values to center vertically */
+  height: 30px;
+}
+
 .jsavnode {
   line-height: 30px !important;
   min-width: 30px !important;
@@ -39,11 +43,6 @@
 .ssAV .jsavline {
   height: 45px;
 }
-
-.jsavcanvas {
-  height:50px;
-}
-
 
 #AlistAppendCON {
   height: 280px;
