--- a/Exercises/List/alistPRO.css
+++ b/Exercises/List/alistPRO.css
@@ -1,3 +1,8 @@
+.jsavcontainer {
+  height: 125px;
+  border: 0;
+}
+
 .jsavnode .jsavvalue { /* Make array cell values center vertically */
   height: 30px;
 }
@@ -10,10 +15,12 @@
   max-height: 30px !important;
 }
 
-.jsavcodeline.jsavhighlight {
-  background-color: #ccc !important;
+#reset { margin-right: 20px;}
+
+#alistInsertPRO.jsavcanvas {
+  height: 125px;
 }
 
-.ssAV .jsavline {
-  height: 45px;
+#alistDeletePRO.jsavcanvas{
+  height: 185px;
 }
