--- a/AV/Development/BinaryPointerTree.css
+++ b/AV/Development/BinaryPointerTree.css
@@ -23,6 +23,12 @@
   border-radius: 30px / 23px;
   width: 60px;
 }
+.jsavbinarypointertreenode.loose {
+  background-color: #aaf
+}
+.jsavbinarypointertreenode.loop {
+  background-color: #faa
+}
 .jsavbinarypointertree .jsavedge {
   stroke-width: 2;
 }
