Refactor list CSS; surface clean the doubly linked list AVs

--- a/AV/List/alistInsertCON.css
+++ b/AV/List/alistInsertCON.css
@@ -1,12 +1,3 @@
-#alistInsertCON .jsavcanvas {
-  margin-top: 20px;
-}
-
-#alistInsertCON .jsavarray {
-  position: absolute;
-  top: 4px;
-}
-
 #alistInsertCON .jsavcode {
   margin-left: 285px;
   width: 560px;
@@ -14,4 +5,8 @@
 
 #alistInsertCON {
   height: 360px;
+}
+
+#alistInsertCON .jsavlabel{
+  margin-bottom: 0;
 }
