--- a/AV/List/dlist.css
+++ b/AV/List/dlist.css
@@ -7,6 +7,7 @@
   height: 100%;
   background-color: #eee;
 }
+
 .jsavrightpointerarea {
   border-left: 1px solid black;
   position: absolute;
@@ -16,10 +17,9 @@
   height: 100%;
   background-color: #eee;
 }
+
 .jsavhorizontallist.jsavautoresize .jsavnode {
-  min-width: 50px;
-  min-height: 30px; 
-  max-height: 45px;
-  line-height: 30px;
+  min-width: 50px !important;
+  max-height: 45px !important;
   padding-right: 0;
 }
