--- a/AV/List/listADTposCON.css
+++ b/AV/List/listADTposCON.css
@@ -2,10 +2,18 @@
   height: 180px;
 }
 
-#listADTposCON .jsavnode{
+.jsavoutput.jsavline{
+  height: 30px;
+}
+
+#listADTposCON .jsavnode {
   border: 0;
   background-color: #eed;
-  line-height: 60px;
+  line-height: 60px !important;
+  min-width: 60px !important;
+  max-width: 60px !mportant;
+  min-height: 60px !important;
+  max-height: 60px !important;
   font-size: 20px;
   min-width: 65px;
   box-shadow: 0 0 0;
